# scenario-dreamer-decision-layer

./: .gitignore  README.md  pyproject.toml
artifacts/: README.md
configs/baselines/: scenario_dreamer_ctrlsim.yaml
docs/: closed_loop_simulation_field_reverse_engineering.md  ctrl_sim_engineering_note.md  marl_theory_inspirations_for_driving_simulation.md  problem_formulation.md  research_plan.md  transfer_hook.md
notebooks/: README.md  scenario_dreamer_assets_colab.ipynb  scenario_dreamer_baseline_colab.ipynb  scenario_dreamer_dev_eval_colab.ipynb  scenario_dreamer_diversity_audit_colab.ipynb  scenario_dreamer_risk_study_colab.ipynb
references/: papers_manifest.json
results/: README.md
scripts/: _diversity_trace_worker.py  bootstrap_baseline.py  download_assets.py  download_references.py  render_demo.py  run_dev_eval.py  run_diversity_audit.py  run_report_eval.py  run_risk_variance_study.py  run_smoke_eval.py  setup_colab_runtime.py  validate_papers.py
src/scenario_dreamer_decision_layer/: __init__.py  artifacts.py  bootstrap.py  colab.py  config.py  contracts.py  papers.py  runner.py  transfer_hook.py
tests/: test_artifacts.py  test_colab.py  test_config.py  test_download_assets.py  test_runner.py  test_setup_colab_runtime.py  test_transfer_hook.py
