[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-dreamer-decision-layer"
version = "0.1.0"
description = "Scenario Dreamer + frozen CtRL-Sim baseline workspace with normalized experiment artifacts."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
